--- a/src/main/resources/templates/base/standard/search.html
+++ b/src/main/resources/templates/base/standard/search.html
@@ -116,16 +116,14 @@
                 <div class="card-footer">
                   <div class="row col-sm-4 float-lg-right">
                     <button type="submit" class="btn btn-primary">查询</button>
-                    <span class="col-sm-4"> &nbsp;&nbsp;</span>
-                    <a href="/base/standard/search" style="color: #ffffff;">
+                    <span class="col-sm-2"> &nbsp;&nbsp;</span>
+                    <button type="button" class="btn btn-primary">Excel导入</button>
+                    <span class="col-sm-2"> &nbsp;&nbsp;</span>
+                    <a href="/base/standard/insert" style="color: #ffffff;">
                       <button type="button" class="btn btn-primary">添加</button>
                     </a>
-                    <span class="col-sm-4"> &nbsp;&nbsp;</span>
-                    <a href="/base/standard/upload" style="color: #ffffff;">
-                      <button type="button" class="btn btn-primary">Excel 上传</button>
-                    </a>
                   </div>
-               </div>
+                </div>
               </div>
             </form>
           </div>
@@ -134,7 +132,7 @@
             <div class="card-header">
               <h3 class="card-title">Hover Data Table</h3>
             </div>
-            <!-- /.card-header -->
+             /.card-header -->
           <!--<div class="card-body">
             <table id="example2" class="table table-bordered table-hover">
               <thead>
