--- a/src/main/resources/templates/calendar_manage.html
+++ b/src/main/resources/templates/calendar_manage.html
@@ -119,16 +119,16 @@
                 <textarea id="new-event-detail" class="form-control" placeholder="请输入相关事件信息" rows="5" cols="5"></textarea>
                 <br>任务所在设备
                 <select  id="new-event-equipment" class="form-control">
-                  <option value="server">服务器</option>
-                  <option value="machine">放映机</option>
-                  <option value="voice">音响</option>
+                  <option value="server">戴尔服务器</option>
+                  <option value="machine">巴克放映机</option>
+                  <option value="voice">杜比音响</option>
                 </select>
                 <br>请选择相关负责人
                 <select  id="new-event-staff" class="form-control">
-                  <option value="维修人员1">维修人员1</option>
-                  <option value="维修人员乙">维修人员乙</option>
-                  <option value="维修人员3">维修人员3</option>
-                  <option value="维护人员3">维护人员3</option>
+                  <option value="维修人员1">张三</option>
+                  <option value="维修人员乙">李四</option>
+                  <option value="维修人员3">王五</option>
+                  <option value="维护人员3">赵六</option>
                 </select>
                 <br>请选择开始时间：
                 <input id="new-event-start-time" type="time" class="form-control">
