--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -367,7 +367,7 @@
   imageToCanvas(canvas,0,0);
   function imageToCanvas(canvas,x,y) {
     var img = new Image();
-    img.src = "1.jpg";
+    img.src = "/dist/img/WechatIMG273.jpeg";
     minvaluex = canvas.width - img.width;
     minvaluey = canvas.height - img.height;
     img.onload = function(){
