--- a/src/main/resources/templates/documents/operate_details.html
+++ b/src/main/resources/templates/documents/operate_details.html
@@ -99,10 +99,10 @@
                 </div>
                 <!-- /.col -->
               </div>
-              <div class="col-12 row ">&nbsp;</div>
+              <div class="col-12 row">&nbsp;</div>
               <!-- info row -->
               <div class="row invoice-info">
-                <div class="col-sm-4 invoice-col">
+                <div class="col-sm-2 invoice-col">
                   <strong>设备品牌及类型：</strong>
                 
                     <br> BARCO DP2K <br>
@@ -111,15 +111,15 @@
 				  
                 </div>
                 <!-- /.col -->
-                <div class="col-sm-4 invoice-col">
+                <div class="col-sm-2 invoice-col">
                   <address>
 					<strong>支持的设备型号：</strong>
                     <br>DP2K SLP LLP<br>
                   </address>
                 </div>
-				<div class="col-sm-4 invoice-col">
+                <div class="col-sm-2 invoice-col">
                   <address>
-					<strong>建议维护周期：</strong>
+                    <strong>建议维护周期：</strong>
                     <br>6个月<br>
                   </address>
                 </div>
@@ -162,12 +162,11 @@
                   </table>
 				  </div>
 				  <div class="col-6 table-responsive">
-					<h4>&nbsp&nbsp&nbsp操作视频</h4>
                     <video style="height: 340px; width: 617px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">
                       <span>&nbsp;</span>
                     </video>
                     <div class="col-11">
-                    <button style="float: right" type="submit" class="btn btn-info">答题</button>
+                    <button style="float: left" type="submit" class="btn btn-info">答题</button>
                     </div>
                   </div>
                 <!-- /.col -->
