--- a/src/main/resources/templates/online_course.html
+++ b/src/main/resources/templates/online_course.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>相关标准</title>
+  <title>在线课程</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -68,12 +68,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>相关标准</h1>
+            <h1>在线课程</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">主页</a></li>
-              <li class="breadcrumb-item active">相关标准</li>
+              <li class="breadcrumb-item active">在线课程</li>
             </ol>
           </div>
         </div>
@@ -86,7 +86,7 @@
         <div class="col-12">
 		<div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">输入标准检索信息</h3>
+                <h3 class="card-title">输入在线课程检索信息</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
@@ -94,7 +94,7 @@
                 <div class="card-body">
                   <div class="form-group row">
                     <div class="col-4">
-                      <label>标准类型</label>
+                      <label>在线课程类型</label>
                       <div class="form-group">
                         <!--<label>Select</label>-->
                         <select class="form-control">
@@ -107,7 +107,7 @@
                       </div>
                     </div>
                     <div class="col-4">
-                      <label>标准对象</label>
+                      <label>在线课程对象</label>
                       <div class="form-group">
                         <!--<label>Select</label>-->
                         <select class="form-control">
@@ -118,7 +118,7 @@
                       </div>
                     </div>
                     <div class="col-4">
-                      <label>标准文件名称/标准编号：</label>
+                      <label>在线课程名称：</label>
                       <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：电影院星级的划分与评定/GY/T 248-2011">
                     </div>
                   </div>
@@ -136,7 +136,7 @@
           <!-- /.card -->
 		  <div class="card">
             <div class="card-header">
-              <h3 class="card-title">相关标准</h3>
+              <h3 class="card-title">在线课程</h3>
             </div>
              <!-- /.card-header -->
             <div class="card-body">
