--- a/src/main/resources/templates/question/score.html
+++ b/src/main/resources/templates/question/score.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>答题管理</title>
+    <title>积分管理</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -69,12 +69,12 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>答题管理</h1>
+                        <h1>积分管理</h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a href="#">主页</a></li>
-                            <li class="breadcrumb-item active">答题管理</li>
+                            <li class="breadcrumb-item active">积分管理</li>
                         </ol>
                     </div>
                 </div>
@@ -86,29 +86,29 @@
                 <div class="col-12">
                     <div class="card card-primary">
                             <div class="card-header">
-                                <h3 class="card-title">答题方式</h3>
+                                <h3 class="card-title">总积分</h3>
                             </div>
                         <div class="card-body">
-                            <a href="/question/online">
-                                <button type="button" class="btn btn-primary">在线测试</button>
-                            </a>
+                            <h5>
+                                您当前的总积分为: <strong>780</strong>
+                            </h5>
                         </div>
                     </div>
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">题目信息汇总</h3>
+                            <h3 class="card-title">积分历史动态</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
                             <table id="example1" class="table table-bordered table-striped">
                                 <thead>
                                 <tr>
-                                    <th>题目类型</th>
-                                    <th>题目对象</th>
-                                    <th>题目分值</th>
-                                    <th>相关资源</th>
-                                    <th>预留属性</th>
-                                    <th>进入答题</th>
+                                    <th>日期</th>
+                                    <th>时间</th>
+                                    <th>变动</th>
+                                    <th>原因</th>
+                                    <th>当前总积分</th>
+                                    <th>详情>></th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -124,12 +124,12 @@
                                     <th><a href="/details">详情>></a></th>
                                 </tr>
                                 <tr>
-                                    <td>维护</td>
-                                    <td>影院</td>
-                                    <td>3</td>
-                                    <td>GY 2312标准</td>
-                                    <td>4</td>
-                                    <td ><a href="/question/details">进入答题</a></td>
+                                    <td>2019年10月20日</td>
+                                    <td>13:09</td>
+                                    <td>+3</td>
+                                    <td>答题</td>
+                                    <td>777</td>
+                                    <td ><a href="#">详情>></a></td>
 
                                 </tr>
                                 </tbody>
