--- a/src/main/resources/templates/system/user.html
+++ b/src/main/resources/templates/system/user.html
@@ -70,12 +70,12 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>用户信息管理</h1>
+                        <h1>用户管理</h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a href="#">主页</a></li>
-                            <li class="breadcrumb-item active">用户信息管理</li>
+                            <li class="breadcrumb-item active">用户管理</li>
                         </ol>
                     </div>
                 </div>
@@ -87,51 +87,7 @@
                 <div class="col-12">
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">请输入标准检索信息</h3>
-                        </div>
-                        <!-- /.card-header -->
-                        <!-- form start -->
-                        <form role="form">
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-3 float-lg-left">
-                                        <div class="form-group">
-                                            <label>所在省市：</label>
-                                            <select id="province" class="form-control" name="province">
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-3 float-lg-right">
-                                        <div class="form-group">
-                                            <label>所在区：</label>
-                                            <select id="city" class="form-control" name="city">
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="form-group col-3 float-lg-left">
-                                        <label>影院名称：</label>
-                                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
-                                    </div>
-                                    <div class="form-group col-3 float-lg-right">
-                                        <label>影院经理：</label>
-                                        <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
-                                    </div>
-                                </div>
-                                <div class="card-footer">
-                                    <div class="row col-sm-2 float-lg-right">
-                                        <button type="submit" class="btn btn-primary">查询</button>
-                                        <span class="col-sm-2"> &nbsp;&nbsp;</span>
-                                        <a href="/cinema/insert" style="color: #ffffff;">
-                                            <button type="button" class="btn btn-primary">添加</button>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="card card-primary">
-                        <div class="card-header">
-                            <h3 class="card-title">基础信息检索结果</h3>
+                            <h3 class="card-title">系统用户基本信息</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
@@ -140,26 +96,32 @@
                                 <tr>
                                     <th>用户名</th>
                                     <th>性别</th>
-                                    <th>生日</th>
+                                    <th>手机号</th>
+                                    <th>邮箱</th>
                                     <th>QQ</th>
-                                    <th>个人介绍</th>
+                                    <th>真实姓名</th>
+                                    <th>状态</th>
+                                    <th>角色</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr th:each="student : ${studentInfos}">
-                                    <td th:text="${student.username}"></td>
-                                    <td th:text="${student.sex}"></td>
-                                    <td th:text="${student.birthday}"></td>
-                                    <td th:text="${student.QQ}"></td>
-                                    <td th:text="${student.myself}"></td>
+                                <tr th:each="user : ${users}">
+                                    <td th:text="${user.username}"></td>
+                                    <td th:text="${user.sex}"></td>
+                                    <td th:text="${user.phone}"></td>
+                                    <td th:text="${user.mail}"></td>
+                                    <td th:text="${user.qq}"></td>
+                                    <td th:text="${user.name}"></td>
+                                    <td th:text="${user.state}"></td>
+                                    <td th:text="${user.role}"></td>
                                     <td>
-                                        <div class="float-lg-right">
+                                        <div class="float-lg-left">
                                             <a href="/system/update" style="color: #ffffff;">
-                                                <button type="button" class="btn btn-sm">修改</button>
+                                                <button type="button" class="btn btn-sm" style="color: green">修改</button>
                                             </a>
                                             <a href="/system/delete" style="color: #ffffff;">
-                                                <button type="button" class="btn btn-sm">删除</button>
+                                                <button type="button" class="btn btn-sm" style="color: red">删除</button>
                                             </a>
                                         </div>
                                     </td>
