--- a/src/main/resources/templates/base/cinema/show.html
+++ b/src/main/resources/templates/base/cinema/show.html
@@ -117,8 +117,10 @@
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <div class="row col-sm-2 float-lg-right">
+                                    <div class="row col-sm-4 float-lg-right">
                                         <button type="submit" class="btn btn-primary">查询</button>
+                                        <span class="col-sm-2"> &nbsp;&nbsp;</span>
+                                        <button type="button" class="btn btn-primary">Excel导入</button>
                                         <span class="col-sm-2"> &nbsp;&nbsp;</span>
                                         <a href="/base/cinema/insert" style="color: #ffffff;">
                                             <button type="button" class="btn btn-primary">添加</button>
