--- a/src/main/resources/templates/direction_chat.html
+++ b/src/main/resources/templates/direction_chat.html
@@ -162,7 +162,7 @@
                   <!-- Message. Default to the left -->
                   <div class="direct-chat-msg right">
                     <div class="direct-chat-info clearfix">
-                      <span class="direct-chat-name float-right">影院管理员</span>
+                      <span class="direct-chat-name float-right">张静</span>
                       <span class="direct-chat-timestamp float-left">10月21日 14:00</span>
                     </div>
                     <!-- /.direct-chat-info -->
@@ -178,7 +178,7 @@
                   <!-- Message to the right -->
                   <div class="direct-chat-msg">
                     <div class="direct-chat-info clearfix">
-                      <span class="direct-chat-name float-left">维修人员</span>
+                      <span class="direct-chat-name float-left">李光</span>
                       <span class="direct-chat-timestamp float-right">10月21日 14:05 </span>
                     </div>
                     <!-- /.direct-chat-info -->
@@ -238,7 +238,7 @@
             <!-- DIRECT CHAT PRIMARY -->
             <div class="card card-success direct-chat direct-chat-success">
               <div class="card-header">
-                <h3 class="card-title">会话列表 1</h3>
+                <h3 class="card-title">会话列表 2</h3>
 
                 <div class="card-tools">
                   <span data-toggle="tooltip" title="3 New Messages" class="badge bg-success">3</span>
@@ -258,7 +258,7 @@
                   <!-- Message. Default to the left -->
                   <div class="direct-chat-msg right">
                     <div class="direct-chat-info clearfix">
-                      <span class="direct-chat-name float-right">影院管理员</span>
+                      <span class="direct-chat-name float-right">张静</span>
                       <span class="direct-chat-timestamp float-left">10月21日 14:00</span>
                     </div>
                     <!-- /.direct-chat-info -->
@@ -274,7 +274,7 @@
                   <!-- Message to the right -->
                   <div class="direct-chat-msg">
                     <div class="direct-chat-info clearfix">
-                      <span class="direct-chat-name float-left">维修人员</span>
+                      <span class="direct-chat-name float-left">赵未</span>
                       <span class="direct-chat-timestamp float-right">10月21日 14:05 </span>
                     </div>
                     <!-- /.direct-chat-info -->
@@ -334,7 +334,7 @@
             <!-- DIRECT CHAT PRIMARY -->
             <div class="card card-warning direct-chat direct-chat-warning">
               <div class="card-header">
-                <h3 class="card-title">会话列表 1</h3>
+                <h3 class="card-title">会话列表 3</h3>
 
                 <div class="card-tools">
                   <span data-toggle="tooltip" title="3 New Messages" class="badge bg-warning">3</span>
@@ -354,7 +354,7 @@
                   <!-- Message. Default to the left -->
                   <div class="direct-chat-msg right">
                     <div class="direct-chat-info clearfix">
-                      <span class="direct-chat-name float-right">影院管理员</span>
+                      <span class="direct-chat-name float-right">张静</span>
                       <span class="direct-chat-timestamp float-left">10月21日 14:00</span>
                     </div>
                     <!-- /.direct-chat-info -->
@@ -370,7 +370,7 @@
                   <!-- Message to the right -->
                   <div class="direct-chat-msg">
                     <div class="direct-chat-info clearfix">
-                      <span class="direct-chat-name float-left">维修人员</span>
+                      <span class="direct-chat-name float-left">钱三</span>
                       <span class="direct-chat-timestamp float-right">10月21日 14:05 </span>
                     </div>
                     <!-- /.direct-chat-info -->
@@ -429,7 +429,7 @@
             <!-- DIRECT CHAT PRIMARY -->
             <div class="card card-danger direct-chat direct-chat-danger">
               <div class="card-header">
-                <h3 class="card-title">会话列表 1</h3>
+                <h3 class="card-title">会话列表 4</h3>
 
                 <div class="card-tools">
                   <span data-toggle="tooltip" title="3 New Messages" class="badge bg-danger">3</span>
@@ -449,7 +449,7 @@
                   <!-- Message. Default to the left -->
                   <div class="direct-chat-msg right">
                     <div class="direct-chat-info clearfix">
-                      <span class="direct-chat-name float-right">影院管理员</span>
+                      <span class="direct-chat-name float-right">张静</span>
                       <span class="direct-chat-timestamp float-left">10月21日 14:00</span>
                     </div>
                     <!-- /.direct-chat-info -->
@@ -465,7 +465,7 @@
                   <!-- Message to the right -->
                   <div class="direct-chat-msg">
                     <div class="direct-chat-info clearfix">
-                      <span class="direct-chat-name float-left">维修人员</span>
+                      <span class="direct-chat-name float-left">刘进</span>
                       <span class="direct-chat-timestamp float-right">10月21日 14:05 </span>
                     </div>
                     <!-- /.direct-chat-info -->
