--- a/src/main/resources/templates/documents/hand_details.html
+++ b/src/main/resources/templates/documents/hand_details.html
@@ -102,7 +102,7 @@
               </div>
               <!-- info row -->
               <div class="row invoice-info">
-                <div class="col-sm-4 invoice-col">
+                <div class="col-sm-2 invoice-col">
                   <strong>设备品牌及类型：</strong>
                 
                     <br> BARCO DP2K <br>
@@ -111,13 +111,13 @@
 				  
                 </div>
                 <!-- /.col -->
-                <div class="col-sm-4 invoice-col">
+                <div class="col-sm-2 invoice-col">
                   <address>
 					<strong>故障代码及说明：</strong>
                     <br>Code 5004: “lamp - no communication” (Error)<br>
                   </address>
                 </div>
-				<div class="col-sm-4 invoice-col">
+				<div class="col-sm-2 invoice-col">
                   <address>
 					<strong>故障级别：</strong>
                     <br>错误<br>
@@ -170,7 +170,7 @@
                     <span>&nbsp;</span>
                   </video>
                   <div class="col-11">
-                    <button style="float: right" type="submit" class="btn btn-info">答题</button>
+                    <button style="float: left" type="submit" class="btn btn-info">答题</button>
                   </div>
                 </div>
 
