--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -39,13 +39,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/index" class="nav-link">
+                    <a href="/system/role" class="nav-link">
                         <i class="fa fa-lock nav-icon"></i>
                         <p>权限管理</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/system/self" class="nav-link">
                         <i class="fa fa-file-text-o nav-icon"></i>
                         <p>个人信息管理</p>
                     </a>
@@ -95,21 +95,21 @@
             </ul>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="/data_machine" class="nav-link">
                 <i class="nav-icon fa fa-cny"></i>
                 <p>
                     资产管理
-                    <i class="right fa fa-angle-left"></i>
+<!--                    <i class="right fa fa-angle-left"></i>-->
                 </p>
             </a>
-            <ul class="nav nav-treeview">
-                <li class="nav-item">
-                    <a href="/data_machine" class="nav-link">
-                        <i class="fa fa-server nav-icon"></i>
-                        <p>设备管理</p>
-                    </a>
-                </li>
-            </ul>
+<!--            <ul class="nav nav-treeview">-->
+<!--                <li class="nav-item">-->
+<!--                    <a href="/data_machine" class="nav-link">-->
+<!--                        <i class="fa fa-server nav-icon"></i>-->
+<!--                        <p>设备管理</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--            </ul>-->
         </li>
 <!--        <li class="nav-item">-->
 <!--            <a href="#" class="nav-link">-->
@@ -181,15 +181,6 @@
                 </li>
             </ul>
         </li>
-        <li class="nav-item has-treeview">
-            <a href="#" class="nav-link">
-                <i class="nav-icon fa fa-star"></i>
-                <p>
-                    影院星级评定
-                    <!--<i class="fa fa-angle-left right"></i>-->
-                </p>
-            </a>
-        </li>
         <li class="nav-item">
             <a href="/direction_chat" class="nav-link">
                 <i class="nav-icon fa fa-table"></i>
@@ -244,7 +235,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/question/score" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
                         <p>积分管理</p>
                     </a>
@@ -252,7 +243,7 @@
             </ul>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="/online_course" class="nav-link">
                 <i class="nav-icon fa fa-table"></i>
                 <p>
                     在线课程
