--- a/src/main/resources/templates/system/self.html
+++ b/src/main/resources/templates/system/self.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>修改用户基本信息</title>
+  <title>个人信息管理</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -69,12 +69,12 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1>修改用户基本信息</h1>
+              <h1>个人信息管理</h1>
             </div>
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item"><a href="/index">主页</a></li>
-                <li class="breadcrumb-item active">修改用户基本信息</li>
+                <li class="breadcrumb-item active">个人信息管理</li>
               </ol>
             </div>
           </div>
@@ -86,11 +86,11 @@
           <div class="col-12">
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">请修改用户基础信息</h3>
+                <h3 class="card-title">修改个人基本信息</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form" th:action="@{/system/updating}" >
+              <form role="form" th:action="@{/system/selfing}" >
                 <div class="card-body">
                   <div class="form-group">
                     <div class="row">
@@ -107,7 +107,21 @@
                           </select>
                         </div>
                       </div>
+                      <div class="form-group col-12 float-lg-left">
+                        <label>原始密码：</label>
+                        <input type="text" class="form-control" th:value="${user.password}">
+                      </div>
                       <div class="form-group col-6 float-lg-left">
+                        <label>新密码：</label>
+                        <input type="text" class="form-control" name="password1">
+                      </div>
+                      <div class="form-group col-6 float-lg-left">
+                        <label>确认密码：</label>
+                        <input type="text" class="form-control" name="password2">
+                      </div>
+                      <div>
+                        <p th:text="${password}" style="color: red" align="center">这里是信息提示.</p>
+                      </div>                      <div class="form-group col-6 float-lg-left">
                         <label>手机号：</label>
                         <input type="text" class="form-control" th:value="${user.phone}" name="phone">
                       </div>
