--- a/src/main/resources/templates/system/update.html
+++ b/src/main/resources/templates/system/update.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>影院基础信息管理</title>
+  <title>修改用户基本信息</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -69,12 +69,12 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1>影院基础信息管理</h1>
+              <h1>修改用户基本信息</h1>
             </div>
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
-                <li class="breadcrumb-item"><a href="#">主页</a></li>
-                <li class="breadcrumb-item active">影院基础信息管理</li>
+                <li class="breadcrumb-item"><a href="/index">主页</a></li>
+                <li class="breadcrumb-item active">修改用户基本信息</li>
               </ol>
             </div>
           </div>
@@ -86,56 +86,59 @@
           <div class="col-12">
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">请输入影院基础信息</h3>
+                <h3 class="card-title">请修改用户基础信息</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form" action="/base/cinema/insert">
+              <form role="form" th:action="@{/system/updating}" >
                 <div class="card-body">
                   <div class="form-group">
                     <div class="row">
-                      <div class="col-6">
-                        <div class="form-group">
-                          <label>所在省市：</label>
-                          <select id="province" class="form-control" name="province">
-                          </select>
-                        </div>
+                      <div class="form-group col-6 float-lg-right">
+                        <label>用户名：</label>
+                        <input type="text" class="form-control" th:placeholder="${session.username}" name="username" disabled>
                       </div>
                       <div class="col-6 ">
                         <div class="form-group">
-                          <label>所在区：</label>
-                          <select id="city" class="form-control" name="city">
+                          <label>性别：</label>
+                          <select class="form-control" name="sex" >
+                            <option th:selected="${user.sex}eq'男'" value="男">男</option>
+                            <option th:selected="${user.sex}eq'女'" value="女">女</option>
                           </select>
                         </div>
                       </div>
-                      <div class="form-group col-12 float-lg-left">
-                        <label>影院名称：</label>
-                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
+                      <div class="form-group col-6 float-lg-left">
+                        <label>手机号：</label>
+                        <input type="text" class="form-control" th:value="${user.phone}" name="phone">
                       </div>
-                      <div class="form-group col-12 float-lg-right">
-                        <label>详细地址：</label>
-                        <input type="text" class="form-control" placeholder="例：平乐园100号" name="address">
+                      <div class="form-group col-6 float-lg-right">
+                        <label>邮箱：</label>
+                        <input type="text" class="form-control" th:value="${user.mail}" name="mail">
                       </div>
 
                       <div class="form-group col-6 float-lg-right">
-                        <label>影院经理：</label>
-                        <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
+                        <label>QQ：</label>
+                        <input type="text" class="form-control" th:value="${user.qq}" name="qq">
                       </div>
                       <div class="form-group col-6 float-lg-right">
-                        <label>经理电话：</label>
-                        <input type="text" class="form-control" placeholder="例：15000000000" name="responsiblePhone">
+                        <label>真实姓名：</label>
+                        <input type="text" class="form-control" th:value="${user.name}" name="name">
                       </div>
                       <div class="form-group col-6 float-lg-right">
-                        <label>影院主管：</label>
-                        <input type="text" class="form-control" placeholder="例：李XX" name="manager">
+                        <label>状态：</label>
+                        <select class="form-control" name="state">
+                         <option value="1" th:selected="${user.state=='1'}">激活</option>
+                         <option value="2" th:selected="${user.state=='2'}">锁定</option>
+                        </select>
                       </div>
                       <div class="form-group col-6 float-lg-right">
-                        <label>主管电话：</label>
-                        <input type="text" class="form-control" placeholder="例：15000000000" name="managerPhone">
-                      </div>
-                      <div class="form-group col-12 float-lg-right">
-                        <label>影厅数量：</label>
-                        <input type="text" class="form-control" placeholder="例：10" name="roomNumber">
+                        <label>角色：</label>
+                        <select class="form-control" name="role">
+                          <option th:selected="${user.role}==0" value="0">系统管理员</option>
+                          <option th:selected="${user.role}==1" value="1">院线公司/影院管理公司</option>
+                          <option th:selected="${user.role}==2" value="2">影院管理员</option>
+                          <option th:selected="${user.role}==3" value="3">影院普通用户</option>
+                        </select>
                       </div>
                     </div>
                   </div>
@@ -143,7 +146,7 @@
                   <div class="form-group">
                     <div class="card-footer">
                       <div class="row float-lg-right">
-                        <button type="submit" class="btn btn-primary">添加</button>
+                        <button type="button" class="btn btn-primary">修改</button>
                       </div>
                     </div>
                   </div>
